# agv_on-board

./: .dockerignore  .gitignore  README.md  record_circle.md  record_square.md  slam_scenarios.html
agv_ws/: .gitignore
agv_ws/src/agv_bringup/: CMakeLists.txt  package.xml
agv_ws/src/agv_bringup/calibration/: calibration_date.txt  camera_intrinsics.yaml  extrinsics.yaml  imu_intrinsics.yaml  mocap_to_base.yaml
agv_ws/src/agv_bringup/config/: base.yaml  imu.yaml  lidar.yaml  settings.yaml  tags.yaml  tags_tag36h11_id0_80mm.yaml  tags_tag36h11_id0_id1_100mm.yaml
agv_ws/src/agv_bringup/launch/: apriltag.launch  aruco.launch  aruco_bringup.launch  aruco_test.launch  bringup.launch  logging.launch
agv_ws/src/agv_bringup/scripts/: aruco_monitor.py
configs/: yyy.rviz
docs/: OFFLINE_SWARMSLAM.md  PUBLISHABILITY_CHECKLIST.md  STAGE_1_CALIBRATION_SOP.md
myagv_ros/: .gitignore
offline_swarmslam/: .dockerignore  README.md
offline_swarmslam/scripts/: Dockerfile.swarmslam  analyze_apriltags.py  build_swarmslam_image.sh  convert_bags_to_ros2.sh  download_cosplace_model.sh  estimate_tag_alignment.py  run_swarmslam_rgbd.sh  run_swarmslam_upstream_official_viz.sh  run_swarmslam_upstream_rgbd.sh
scripts/: myAGVBase.py  setup_robot.sh
scripts/calibration/: extract_realsense_calib.py  imu_static_test.py
scripts/diagnostics/: odom_motion_test.py  realsense_imu_matrix.sh  realsense_raw_imu_video_test.sh  realsense_reduced_modes.sh  robot_readiness_check.sh
scripts/logging/: audit_bag_fast.py  drive_circle.py  drive_forward_back.py  drive_odom_shuttle.py  (+5 more)
(+37 files in other folders)
