<?xml version="1.0"?>
<package format="2">
  <name>agv_bringup</name>
  <version>0.1.0</version>
  <description>Robot-side bringup, calibration, and dataset logging launch files for the AGV SLAM dataset.</description>

  <maintainer email="ubuntu@localhost">AGV Dataset Team</maintainer>
  <license>UNLICENSED</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_msgs</depend>

  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ydlidar_ros_driver</exec_depend>
  <exec_depend>myagv_odometry</exec_depend>

  <export />
</package>
